--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -133,6 +133,117 @@ $options_tally = {
   'backend_level' => [String, ''],
 }
 
+NameComp = Struct.new(:name, :comp)
+
+def get_components(names)
+  # BT "native" component classes
+  components_classes = {
+    'source.ctf.fs' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('fs'),
+    'source.ctf.lttng_live' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('lttng-live'),
+    'filter.utils.muxer' => BT2::BTPlugin.find('utils').get_filter_component_class_by_name('muxer'),
+    'sink.text.pretty' => BT2::BTPlugin.find('text').get_sink_component_class_by_name('pretty'),
+    'sink.ctf.fs' => BT2::BTPlugin.find('ctf').get_sink_component_class_by_name('fs'),
+  }
+
+  # THAPI components
+  thapi_plugins = BT2::BTPlugin.find_all_from_dir(File.join('@prefix@', 'lib'))
+  thapi_plugins.map do |pg|
+    pg.source_component_classes.each { |c| components_classes["source.#{pg.name}.#{c.name}"] = c }
+    pg.filter_component_classes.each { |c| components_classes["filter.#{pg.name}.#{c.name}"] = c }
+    pg.sink_component_classes.each { |c| components_classes["sink.#{pg.name}.#{c.name}"] = c }
+  end
+
+  c = names.flat_map { |name|
+    if name == "filter.intervals.interval"
+        $options[:backends].map { |b| NameComp.new(b, components_classes["filter.#{b}interval.interval"] ) }
+    elsif name == "sink.text.rubypretty"
+        # Yaml and event_lambdas are required by babeltrace*_lib
+        $event_lambdas = {}
+        require 'yaml'
+        require 'babeltrace_omp_lib' if $options[:backends].include?('omp')
+        require 'babeltrace_opencl_lib' if $options[:backends].include?('cl')
+        require 'babeltrace_ze_lib' if $options[:backends].include?('ze')
+        require 'babeltrace_cuda_lib' if $options[:backends].include?('cuda')
+        require 'babeltrace_hip_lib' if $options[:backends].include?('hip')
+
+        NameComp.new('sink.text.rubypretty', lambda { |iterator, _|
+          iterator.next_messages.each do |m|
+            next unless m.type == :BT_MESSAGE_TYPE_EVENT
+
+            e = m.event
+            l = $event_lambdas[e.name]
+            next unless l || !$options[:restrict]
+
+            str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime('%H:%M:%S.%9L')}"
+            if $options[:context]
+              str << " - #{e.stream.trace.get_environment_entry_value_by_name('hostname')}"
+              str << ' - ' << e.get_common_context_field.value.collect do |k, v|
+              "#{k}: #{v}"
+            end.join(', ')
+          end
+          str << " - #{e.name}: "
+        str << (l ? l.call(e.payload_field.value) : e.payload_field.to_s)
+        puts str
+      end
+      } )
+    else
+      NameComp.new(name, components_classes[name])
+    end
+  }
+end
+
+def get_and_add_components(graph,names)
+  get_components(names).map { |nc|
+    name= nc.name
+    comp = nc.comp
+    if name == "sink.text.rubypretty" 
+      graph.add_simple_sink("rubypretty", comp)
+    elsif name == "source.ctf.lttng_live"
+      graph.add(comp, "source_live",
+                params: { 'inputs' => $options[:inputs],
+                          'session-not-found-action' => 'end' })
+    elsif name == "source.ctf.fs"
+  trace_locations =
+    Find.find(*ARGV).reject do |path|
+      FileTest.directory?(path)
+    end.select do |path|
+      File.basename(path) == 'metadata'
+    end.collect do |path|
+      File.dirname(path)
+    end.select do |path|
+      qe = BT2::BTQueryExecutor.new(component_class: comp, object_name: 'babeltrace.support-info',
+                                    params: { 'input' => path, 'type' => 'directory' })
+      qe.query.value['weight'] > 0.5
+    end
+    # One source.ctf.fs per directory
+    trace_locations.each_with_index.map do |trace_location, i|
+      graph.add(comp, "source_#{i}", params: { 'inputs' => [trace_location] })
+    end
+
+  
+    elsif name == "sink.ctf.fs"
+      graph.add(comp, 'ctf_sink',
+                params: {"path" => $options[:output],
+                         "assume-single-trace" => false,
+                          "quiet" => $options[:debug] ? false : true})
+    elsif name == "sink.btx_tally.tally"
+      graph.add(comp, 'tally',
+                params: $options_tally.transform_values { |_, v| v })
+    else
+      graph.add(comp, name)
+    end
+  }
+end
+
+def connects(graph, comps)
+  comps.each_cons(2) do | _out, _in|
+    [_out].flatten.flat_map(&:output_ports).each_with_index do |op, i|
+      ip = _in.input_port(i)
+      graph.connect_ports(op, ip)
+    end
+  end
+end
+
 def common_options(opts)
   opts.on('-b', '--backend BACKEND', Array) do |v|
     $options[:backends] = v
@@ -230,152 +341,13 @@ subcommands[command].order!
 # Fix segfault
 ARGV.uniq!
 
-# BT "native" component classes
-components_classes = {
-  'source.ctf.fs' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('fs'),
-  'source.ctf.lttng_live' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('lttng-live'),
-  'filter.utils.muxer' => BT2::BTPlugin.find('utils').get_filter_component_class_by_name('muxer'),
-  'sink.text.pretty' => BT2::BTPlugin.find('text').get_sink_component_class_by_name('pretty'),
-  'sink.ctf.fs' => BT2::BTPlugin.find('ctf').get_sink_component_class_by_name('fs'),
-}
-
-# THAPI components
-thapi_plugins = BT2::BTPlugin.find_all_from_dir(File.join('@prefix@', 'lib'))
-thapi_plugins.map do |pg|
-  pg.source_component_classes.each { |c| components_classes["source.#{pg.name}.#{c.name}"] = c }
-  pg.filter_component_classes.each { |c| components_classes["filter.#{pg.name}.#{c.name}"] = c }
-  pg.sink_component_classes.each { |c| components_classes["sink.#{pg.name}.#{c.name}"] = c }
-end
+thapi_graph= { "tally" => [ "source.ctf.fs", "filter.utils.muxer", "filter.intervals.interval", "filter.btx_aggreg.aggreg", "sink.btx_tally.tally"],
+               "timeline" => [ "source.ctf.fs", "filter.utils.muxer", "filter.intervals.interval", "filter.btx_aggreg.aggreg", "sink.btx_timeline.timeline"],
+               "trace" => [ "source.ctf.fs", "filter.utils.muxer", "sink.text.rubypretty"],
+               "live2aggreg" => ["source.ctf.lttng_live", "filter.utils.muxer", "filter.intervals.interval", "filter.btx_aggreg.aggreg", "sink.ctf.fs" ],
+               "aggreg2tally" => ["source.ctf.fs", "filter.btx_aggreg.aggreg", "sink.btx_tally.tally"] } 
 
 graph = BT2::BTGraph.new
-
-# Source components
-case command
-when 'live2aggreg'
-  ctf_lttng_live = components_classes.fetch('source.ctf.lttng_live')
-  params =  { 'inputs' => $options[:inputs], 'session-not-found-action' => 'end' }
-  comp_sources = [ graph.add_component(ctf_lttng_live, "source_live",
-                      params: { 'inputs' => $options[:inputs],
-                                'session-not-found-action' => 'end' }) ]
-else
-  ctf_fs = components_classes.fetch('source.ctf.fs')
-
-  trace_locations =
-    Find.find(*ARGV).reject do |path|
-      FileTest.directory?(path)
-    end.select do |path|
-      File.basename(path) == 'metadata'
-    end.collect do |path|
-      File.dirname(path)
-    end.select do |path|
-      qe = BT2::BTQueryExecutor.new(component_class: ctf_fs, object_name: 'babeltrace.support-info',
-                                    params: { 'input' => path, 'type' => 'directory' })
-      qe.query.value['weight'] > 0.5
-    end
-
-  comp_sources = trace_locations.each_with_index.map do |trace_location, i|
-    graph.add_component(ctf_fs, "source_#{i}", params: { 'inputs' => [trace_location] })
-  end
-end
-
-if command != "aggreg2tally"
-  # Muxer components
-  comp_muxer = graph.add_component(components_classes.fetch('filter.utils.muxer'), 'muxer')
-  # Sources to muxer connection
-  comp_sources.flat_map(&:output_ports).each_with_index do |op, i|
-    ip = comp_muxer.input_port(i)
-    graph.connect_ports(op, ip)
-  end
-end
-
-# Rest of graph components
-comps = []
-case command
-when 'trace'
-  # Yaml and event_lambdas are required by babeltrace*_lib
-  $event_lambdas = {}
-  require 'yaml'
-  require 'babeltrace_omp_lib' if $options[:backends].include?('omp')
-  require 'babeltrace_opencl_lib' if $options[:backends].include?('cl')
-  require 'babeltrace_ze_lib' if $options[:backends].include?('ze')
-  require 'babeltrace_cuda_lib' if $options[:backends].include?('cuda')
-  require 'babeltrace_hip_lib' if $options[:backends].include?('hip')
-
-  consume = lambda { |iterator, _|
-    iterator.next_messages.each do |m|
-      next unless m.type == :BT_MESSAGE_TYPE_EVENT
-
-      e = m.event
-      l = $event_lambdas[e.name]
-      next unless l || !$options[:restrict]
-
-      str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime('%H:%M:%S.%9L')}"
-      if $options[:context]
-        str << " - #{e.stream.trace.get_environment_entry_value_by_name('hostname')}"
-        str << ' - ' << e.get_common_context_field.value.collect do |k, v|
-          "#{k}: #{v}"
-        end.join(', ')
-      end
-      str << " - #{e.name}: "
-      str << (l ? l.call(e.payload_field.value) : e.payload_field.to_s)
-      puts str
-    end
-  }
-  comps << graph.add_simple_sink('babeltrace_thapi', consume)
-when 'tally'
-  $options[:backends].each do |name|
-    comps << graph.add_component(components_classes.fetch("filter.#{name}interval.interval"), "#{name}interval")
-  end
-  comps << graph.add_component(components_classes.fetch('filter.btx_aggreg.aggreg'), 'aggreg')
-  comps << graph.add_component(components_classes.fetch('sink.btx_tally.tally'), 'tally',
-                               params: $options_tally.transform_values { |_, v| v })
-when 'tally'
-  $options[:backends].each do |name|
-    comps << graph.add_component(components_classes.fetch("filter.#{name}interval.interval"), "#{name}interval")
-  end
-  comps << graph.add_component(components_classes.fetch('filter.btx_aggreg.aggreg'), 'aggreg')
-  comps << graph.add_component(components_classes.fetch('sink.btx_tally.tally'), 'tally',
-                               params: $options_tally.transform_values { |_, v| v })
-when 'live2aggreg'
-  $options[:backends].each do |name|
-    comps << graph.add_component(components_classes.fetch("filter.#{name}interval.interval"), "#{name}interval")
-  end
-  comps << graph.add_component(components_classes.fetch('sink.ctf.fs'), 'ctf_sink',
-                               params: {"path" => $options[:output],
-                                        "assume-single-trace" => false,
-                                        "quiet" => $options[:debug] ? false : true})
-when 'aggreg2tally'
-  comps << graph.add_component(components_classes.fetch('filter.btx_aggreg.aggreg'), 'aggreg')
-  comps << graph.add_component(components_classes.fetch('sink.btx_tally.tally'), 'tally',
-                               params: $options_tally.transform_values { |_, v| v })
-end
-
-
-
-case command
-when 'aggreg2tally'
-  # Overwrite muxer, with aggreg, we didn't connect before
-  comp_muxer = comps.shift
-  # Sources to muxer connection
-  comp_sources.flat_map(&:output_ports).each_with_index do |op, i|
-    ip = comp_muxer.input_port(i)
-    graph.connect_ports(op, ip)
-  end
-end
-
-# Muxer to serial part
-[comp_muxer, comps].flatten.each_cons(2) do |_out, _in|
-  op = _out.output_port(0)
-  ip = _in.input_port(0)
-  graph.connect_ports(op, ip)
-end
-
-if $options[:debug]
-  cli = graph.cli
-  #puts cli
-  puts "babeltrace_thapi: babeltrace2 cli command will be saved in ./babeltrace_thapi_cli.sh"
-  $stdout.flush
-  File::open('babeltrace_thapi_cli.sh','w') { |f| f.write(cli) }
-end
-
+comp = get_and_add_components(graph, thapi_graph[command])
+connects(graph,comp)
 graph.run
