--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -331,7 +331,7 @@ ARGV.uniq!
 
 thapi_graph = { 'tally' => ['source.ctf.fs', 'filter.utils.muxer', 'filter.intervals.interval', 'filter.btx_aggreg.aggreg', 'sink.btx_tally.tally'],
                 'timeline' => ['source.ctf.fs', 'filter.utils.muxer', 'filter.intervals.interval',
-                               'filter.btx_aggreg.aggreg', 'sink.btx_timeline.timeline'],
+                               'sink.btx_timeline.timeline'],
                 'trace' => ['source.ctf.fs', 'filter.utils.muxer', 'sink.text.rubypretty'],
                 'live2aggreg' => ['source.ctf.lttng_live', 'filter.utils.muxer', 'filter.intervals.interval',
                                   'filter.btx_aggreg.aggreg', 'sink.ctf.fs'],
@@ -340,4 +340,13 @@ thapi_graph = { 'tally' => ['source.ctf.fs', 'filter.utils.muxer', 'filter.inter
 graph = BT2::BTGraph.new
 comp = get_and_add_components(graph, thapi_graph[command])
 connects(graph, comp)
+
+if $options[:debug]
+  cli = graph.cli
+  #puts cli
+  puts "babeltrace_thapi: babeltrace2 cli command will be saved in ./babeltrace_thapi_cli.sh"
+  $stdout.flush
+  File::open('babeltrace_thapi_cli.sh','w') { |f| f.write(cli) }
+end
+
 graph.run
